分数与循环小数

--- a/primary/grade6/分数与小数/分数计算与比较大小_学生篇.html
+++ b/primary/grade6/分数与小数/分数计算与比较大小_学生篇.html
@@ -63,14 +63,18 @@
 <li>分数除法：等于乘以除数的<strong>倒数</strong>，化为乘法来计算</li>
 </ol>
 <h3 id="7-分数大小比较">7. 分数大小比较</h3>
+<p>比较两个正数的大小的两个常规办法：</p>
+<ul>
+<li>相除与1比大小</li>
+<li>相减与0比大小</li>
+</ul>
+<p>比较两个正分数大小的办法：</p>
 <ul>
 <li>分子通分法</li>
 <li>分母通分法</li>
 <li>交叉相乘法</li>
 <li>倒数法</li>
 <li>特殊数比较法</li>
-<li>相除与1比大小</li>
-<li>相减与0比大小</li>
 </ul>
 <h2 id="二例题">二、例题</h2>
 <hr>
