整除与数论练习题

--- a/primary/grade6/1.整除与数论/练习题/约数练习-5答案.html
+++ b/primary/grade6/1.整除与数论/练习题/约数练习-5答案.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="UTF-8">
-        <title>约数练习及答案-5</title>
+        <title>约数练习-5答案</title>
         <style>
 </style>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css" integrity="sha384-yFRtMMDnQtDRO8rLpMIKrtPCD5jdktao2TV19YiZYWMDkUR5GQZR/NOVTdquEx1j" crossorigin="anonymous">
@@ -24,7 +24,7 @@
         
     </head>
     <body class="vscode-light">
-        <h1 id="约数练习及答案-5">约数练习及答案-5</h1>
+        <h1 id="约数练习-5答案">约数练习-5答案</h1>
 <ol>
 <li>
 <p>边长为自然数，面积为105的形状不同的长方形共有多少种？
